# shgrid-docs

./: LICENSE  Shgrid.postman_collection.json  docker-compose.prod.yml
frontend/: .env.example  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/lib/: codeBlock.svelte  footer.svelte  header.svelte
frontend/src/routes/: +error.svelte  hero.svelte
frontend/src/routes/(app)/: +layout.svelte  +page.svelte  hero.svelte  install.svelte
frontend/src/routes/(app)/examples/: +page.svelte
frontend/src/routes/examples/contacts/: +page.svelte
frontend/src/styles/: _cards.scss  _components.scss  _fonts.scss  _tags.scss  main.scss
server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  justfile
server/migrations/: 20230826125818_create_contact_table.sql  20230826130150_create_organisation_table.sql
server/src/: config.rs  error.rs  lib.rs  main.rs  query_params.rs
server/src/models/: contact.rs  mod.rs  organisation.rs
server/src/routes/: contact.rs  mod.rs  organisation.rs
