[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.18", features = ["macros"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
fake = "2.6.1"
futures = "0.3.28"
rand = "0.8.5"
sea-query = "0.29.0-rc.2"
sea-query-binder = {version = "0.4.0-rc.2", features = [
  "sqlx-postgres",
  "with-chrono",
  "with-json",
  "with-rust_decimal",
  "with-bigdecimal",
  "with-uuid",
  "with-time",
  "with-ipnetwork",
  "with-mac_address",
]}
serde = "1.0.171"
serde_json = "1.0.102"
shuffle = "0.1.7"
sqlx = { version = "0.6.3", features = ["uuid", "runtime-tokio-native-tls", "postgres", "chrono", "json", "offline"] }
thiserror = "1.0.47"
tokio = { version = "1.29.1", features = ["macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["cors"] }
uuid = { version = "1.4.0", features = ["serde"] }
