[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.3", features = ["macros"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
fake = "2.6.1"
futures = "0.3.28"
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
shuffle = "0.1.7"
thiserror = "1.0.47"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
